--- a/Qt/ApplicationComponents/Resources/UI/pqAxesToolbar.ui
+++ b/Qt/ApplicationComponents/Resources/UI/pqAxesToolbar.ui
@@ -44,7 +44,7 @@
     <bool>false</bool>
    </property>
    <property name="icon" >
-    <iconset resource="../pqComponents.qrc" >:/pqWidgets/Icons/pqShowCenterAxes.png</iconset>
+    <iconset resource="../pqComponents.qrc" >:/pqWidgets/Icons/pqShowCenterAxes.svg</iconset>
    </property>
    <property name="text" >
     <string>Show Center</string>
@@ -61,7 +61,7 @@
     <bool>false</bool>
    </property>
    <property name="icon" >
-    <iconset resource="../pqComponents.qrc" >:/pqWidgets/Icons/pqPickCenter.png</iconset>
+    <iconset resource="../pqComponents.qrc" >:/pqWidgets/Icons/pqPickCenter.svg</iconset>
    </property>
    <property name="text" >
     <string>Pick Center</string>
@@ -81,7 +81,7 @@
     <bool>false</bool>
    </property>
    <property name="icon" >
-    <iconset resource="../pqComponents.qrc" >:/pqWidgets/Icons/pqResetCenter.png</iconset>
+    <iconset resource="../pqComponents.qrc" >:/pqWidgets/Icons/pqResetCenter.svg</iconset>
    </property>
    <property name="text" >
     <string>Reset Center</string>
