--- a/Qt/Components/Resources/UI/pqCameraDialog.ui
+++ b/Qt/Components/Resources/UI/pqCameraDialog.ui
@@ -107,7 +107,7 @@
            </property>
            <property name="icon">
             <iconset resource="../pqComponents.qrc">
-             <normaloff>:/pqWidgets/Icons/pqXPlus.png</normaloff>:/pqWidgets/Icons/pqXPlus.png</iconset>
+             <normaloff>:/pqWidgets/Icons/pqXPlus.svg</normaloff>:/pqWidgets/Icons/pqXPlus.svg</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -127,7 +127,7 @@
            </property>
            <property name="icon">
             <iconset resource="../pqComponents.qrc">
-             <normaloff>:/pqWidgets/Icons/pqXMinus.png</normaloff>:/pqWidgets/Icons/pqXMinus.png</iconset>
+             <normaloff>:/pqWidgets/Icons/pqXMinus.svg</normaloff>:/pqWidgets/Icons/pqXMinus.svg</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -147,7 +147,7 @@
            </property>
            <property name="icon">
             <iconset resource="../pqComponents.qrc">
-             <normaloff>:/pqWidgets/Icons/pqYPlus.png</normaloff>:/pqWidgets/Icons/pqYPlus.png</iconset>
+             <normaloff>:/pqWidgets/Icons/pqYPlus.svg</normaloff>:/pqWidgets/Icons/pqYPlus.svg</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -167,7 +167,7 @@
            </property>
            <property name="icon">
             <iconset resource="../pqComponents.qrc">
-             <normaloff>:/pqWidgets/Icons/pqYMinus.png</normaloff>:/pqWidgets/Icons/pqYMinus.png</iconset>
+             <normaloff>:/pqWidgets/Icons/pqYMinus.svg</normaloff>:/pqWidgets/Icons/pqYMinus.svg</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -187,7 +187,7 @@
            </property>
            <property name="icon">
             <iconset resource="../pqComponents.qrc">
-             <normaloff>:/pqWidgets/Icons/pqZPlus.png</normaloff>:/pqWidgets/Icons/pqZPlus.png</iconset>
+             <normaloff>:/pqWidgets/Icons/pqZPlus.svg</normaloff>:/pqWidgets/Icons/pqZPlus.svg</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -207,7 +207,7 @@
            </property>
            <property name="icon">
             <iconset resource="../pqComponents.qrc">
-             <normaloff>:/pqWidgets/Icons/pqZMinus.png</normaloff>:/pqWidgets/Icons/pqZMinus.png</iconset>
+             <normaloff>:/pqWidgets/Icons/pqZMinus.svg</normaloff>:/pqWidgets/Icons/pqZMinus.svg</iconset>
            </property>
            <property name="iconSize">
             <size>
