--- a/Qt/ApplicationComponents/Resources/UI/pqAxesToolbar.ui
+++ b/Qt/ApplicationComponents/Resources/UI/pqAxesToolbar.ui
@@ -26,7 +26,7 @@
     <bool>false</bool>
    </property>
    <property name="icon" >
-    <iconset resource="../pqComponents.qrc">:/pqWidgets/Icons/pqShowOrientationAxes.png</iconset>
+    <iconset resource="../pqComponents.qrc">:/pqWidgets/Icons/pqShowOrientationAxes.svg</iconset>
    </property>
    <property name="text" >
     <string>Show Orientation Axes</string>
